--- a/wiki/SetupTutorial.wiki
+++ b/wiki/SetupTutorial.wiki
@@ -30,3 +30,16 @@ as a command line.
 for trigger events, you can use Windows Logon, or similar.
 
 3) After creating your task, you scan test it by right clicking it and running it. You should see the webcam light come on, and an image appear in the directory you specified.
+
+
+= Common Problems=
+1) Program seems to be overwriting the same file, when I wanted a directory.
+
+ - Make sure there is a backslash at the end of the -f switch when specifying a directory.
+
+
+2) Running as scheduled task doesn't seem to be writing the photo anywhere.
+
+- If you are not specifying a -f command, it will write the photo wherever the "initial" directory is for the task. Under the Action it is executing, below the arguments to the .exe, there is a "Start in (optional):" to specify the starting directory. If you put a directory in here, with no -f switch in the arguments directory, it will write to that working folder.
+
+- In the task scheduler properties for your task, there are some options for who the task runs as, and with what privileges. Mine is set to run as "SYSTEM" with "Run whether user is logged on or not", and it has "Run with the highest privileges" checked. I also have the "Hidden" checkbox checked. (I am using Windows 8, this may vary with different versions of Windows)
